[GPU Process] Vertical text is incorrectly displaced https://bugs.webkit.org/show_bug.cgi?id=239484 <rdar://91187123>

Reviewed by Said Abou-Hallawa and Darin Adler.

Implement computeVerticalAdvancesFromPositions() as the mathematical inverse of
fillVectorWithVerticalGlyphPositions().

Covered by existing tests (with the GPU process enabled).
imported/w3c/web-platform-tests/css/css-writing-modes/full-width-003.html has always
failed, but it was reported as passing because it's an -expected-mismatch test and
there was floating point precision differences. This patch correctly marks the test
as failing.

* Source/WebCore/platform/graphics/coretext/DrawGlyphsRecorderCoreText.cpp:
(WebCore::computeHorizontalAdvancesFromPositions):
(WebCore::computeVerticalAdvancesFromPositions):
(WebCore::DrawGlyphsRecorder::recordDrawGlyphs):
(WebCore::computeAdvancesFromPositions): Deleted.
* Source/WebCore/platform/graphics/coretext/FontCascadeCoreText.cpp:
(WebCore::computeBaseOverallTextMatrix):
(WebCore::computeBaseVerticalTextMatrix):
(WebCore::fillVectorWithVerticalGlyphPositions):

Canonical link: https://commits.webkit.org/251981@main